# file-sync

./: FileSync.cabal  file-sync.cabal  package.yaml  readme.md  shell.nix
app/: client.hs  server.hs
src/: ClientApp.hs
src/FileSync/: Client.hs  Core.hs  Messages.hs  QueryApi.hs  Server.hs  ServerApi.hs
