cabal-version:      2.4
name:               FileSync
version:            0.1.0.0
author:             ernestkz
maintainer:         kuznecoe@tcd.ie

library
    default-language: Haskell2010
    exposed-modules:  FileSync.Core
    hs-source-dirs:   src
    build-depends:    base
                            
executable exe
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    main-is:          Main.hs
    build-depends:    base
                    , FileSync
    

